--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -27,6 +27,55 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwlGASCjWXELSJpFN3HbRH8Z0ixQh3HgE&callback=initMap&libraries=places&v=weekly"
+            defer></script>
+    <script>
+        let map;
+        let service;
+        let infowindow;
+
+        function initMap(LookupPlaces) {
+            const sydney = new google.maps.LatLng(0, 0);
+
+            infowindow = new google.maps.InfoWindow();
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: sydney,
+                zoom: 15,
+            });
+
+            const request = {
+                query: LookupPlaces,
+                fields: ["name", "geometry"],
+            };
+
+            service = new google.maps.places.PlacesService(map);
+            service.findPlaceFromQuery(request, (results, status) => {
+                if (status === google.maps.places.PlacesServiceStatus.OK && results) {
+                    for (let i = 0; i < results.length; i++) {
+                        createMarker(results[i]);
+                    }
+
+                    map.setCenter(results[0].geometry.location);
+                }
+            });
+        }
+
+        function createMarker(place) {
+            if (!place.geometry || !place.geometry.location) return;
+
+            const marker = new google.maps.Marker({
+                map,
+                position: place.geometry.location,
+            });
+
+            google.maps.event.addListener(marker, "click", () => {
+                infowindow.setContent(place.name || "");
+                infowindow.open(map);
+            });
+        }
+
+        window.initMap = initMap;
+    </script>
 </body>
 
 </html>
